--- a/crates/vowels/src/templates/input.html
+++ b/crates/vowels/src/templates/input.html
@@ -4,7 +4,7 @@
 	</div>
 	<!-- when keyup fires, send this target.value to id="myoutputid" for rendering -->
 	<input
-		id="{{ input.id|on('keyup', 'myoutputid') }}"
+		id="{{ input.id|on('keyup', 'myoutputid', 'output.html') }}"
 		class="rounded border border-blue-400 bg-blue-100 text-neutral-700 p-2 m-2 placeholder:Enter"
 		placeholder="{{input.placeholder}}"
 	/>
