--- a/crates/forms/src/templates/input.html
+++ b/crates/forms/src/templates/input.html
@@ -2,9 +2,9 @@
 	<div class="italic font-semibold">
 		The data you enter can't be seen by anyone else, since it's in a WebAssembly sandbox. =)
 	</div>
-	<!-- when keyup fires, send this target.value to or rendering -->
+	<!-- when keyup fires, send this target.value to id="myoutputid" for rendering -->
 	<input
-		id="{{ input.id|on('keyup', 'myoutputcount', 'output.html') }}"
+		id="{{ input.id|on('keyup', 'myoutputid', 'form-output.html') }}"
 		class="rounded border border-blue-400 bg-blue-100 text-neutral-700 p-2 m-2 placeholder:Enter"
 		placeholder="{{input.placeholder}}"
 	/>
