--- a/crates/forms/src/templates/output.html
+++ b/crates/forms/src/templates/output.html
@@ -1,4 +1,4 @@
-<div id="myoutputcount" class="border-2 border-dashed border-green-500 p-4 rounded my-4">
+<div id="myoutputid" class="border-2 border-dashed border-green-500 p-4 rounded my-4">
 	<b>{{output.value}}</b>
 	{% if output.count == 0 %} has no vowels. {% elif output.count == 1 %} has 1 vowel. {% else %} has
 	{{output.count}} vowels. {% endif %}
