--- a/crates/forms/src/templates/page.html
+++ b/crates/forms/src/templates/page.html
@@ -1,5 +1,5 @@
 <div id="{{page.id}}" class="p-4">
 	<h1 class="text-red-600 text-2xl font-bold">{{page.title}}</h1>
 	<div>{% include "input.html" %}</div>
-	<div>{% include "form-output.html" %}</div>
+	<div>{% include "output.html" %}</div>
 </div>
