--- a/crates/vowels/src/templates/input.html
+++ b/crates/vowels/src/templates/input.html
@@ -5,7 +5,7 @@
 	<!-- when keyup fires, send this target.value to or rendering -->
 	<input
 		id="{{ input.id|on('keyup', 'output.html') }}"
-		name="output"
+		name="phrase"
 		class="rounded border border-blue-400 bg-blue-100 text-neutral-700 p-2 m-2 placeholder:Enter"
 		placeholder="{{input.placeholder}}"
 	/>
