--- a/crates/forms/src/templates/input.html
+++ b/crates/forms/src/templates/input.html
@@ -9,7 +9,7 @@
 			<div class="flex-1">Username:</div>
 			<div class="flex-1">
 				<input
-					id="{{ input.username_input|on('keyup', 'username.html') }}"
+					id="{{ input.username_input|on('keyup') }}"
 					name="username"
 					class="rounded border border-blue-400 bg-blue-100 text-neutral-700 p-2 m-2 placeholder:Enter"
 					placeholder="{{input.placeholder}}"
@@ -20,7 +20,7 @@
 			<div class="flex-1">Password:</div>
 			<div class="flex-1">
 				<input
-					id="{{ input.password_input|on('keyup', 'username.html') }}"
+					id="{{ input.password_input|on('keyup') }}"
 					name="password"
 					data-content="password"
 					class="rounded border border-blue-400 bg-red-100 text-neutral-700 p-2 m-2 placeholder:Enter"
