make password of same type

--- a/crates/forms/src/templates/input.html
+++ b/crates/forms/src/templates/input.html
@@ -21,6 +21,7 @@
 			<div class="flex-1">
 				<input
 					id="{{ input.password_input|on('keyup') }}"
+					type="password"
 					name="password"
 					data-content="password"
 					class="rounded border border-blue-400 bg-red-100 text-neutral-700 p-2 m-2 placeholder:Enter"
