new API: use target and selectors params
We now pass the `target` to render to specify which template we are targeting as the top template.

We now use the optional selectors in activate so we can re-activate any selectors that were re-painted during the last refresh

--- a/crates/vowels/src/templates/input.html
+++ b/crates/vowels/src/templates/input.html
@@ -8,6 +8,7 @@
 		name="phrase"
 		class="rounded border border-blue-400 bg-blue-100 text-neutral-700 p-2 m-2 placeholder:Enter"
 		placeholder="{{input.placeholder}}"
+		data-context-target="output.html"
 	/>
 	<div class="italic font-semibold">
 		"But it can still calculate how many vowels are in your words for you!"
