--- a/crates/forms/src/templates/input.html
+++ b/crates/forms/src/templates/input.html
@@ -13,6 +13,7 @@
 					name="username"
 					class="rounded border border-blue-400 bg-blue-100 text-neutral-700 p-2 m-2 placeholder:Enter"
 					placeholder="{{input.placeholder}}"
+					data-context-target="output.html"
 				/>
 			</div>
 		</div>
@@ -25,6 +26,7 @@
 					name="password"
 					data-content="password"
 					class="rounded border border-blue-400 bg-red-100 text-neutral-700 p-2 m-2 placeholder:Enter"
+					data-context-target="output.html"
 				/>
 			</div>
 		</div>
