--- a/examples/forms/src/templates/input.html
+++ b/examples/forms/src/templates/input.html
@@ -10,9 +10,8 @@
 			<div class="flex-1">
 				<!-- 1) input.username_input, 2) context name 3) kwargs: ie. tagvals-->
 				<input
-					id="{{ input.username_input.id|on('keyup') }}"
+					id="{{ input.id|on('keyup') }}"
 					data-context-name="username"
-					data-context-value='{{ input.username_input|extend(tag="key", val=0) }}'
 					class="rounded border border-blue-400 bg-blue-100 text-neutral-700 p-2 m-2 placeholder:Enter"
 					placeholder="{{input.placeholder}}"
 					type="text"
@@ -23,9 +22,8 @@
 			<div class="flex-1">Password Input:</div>
 			<div class="flex-1">
 				<input
-					id="{{ input.password_input.id|on('keyup') }}"
+					id="{{ input.id|on('keyup') }}"
 					data-context-name="password"
-					data-context-value="{{ input.password_input.target|tojson }}"
 					class="rounded border border-blue-400 bg-red-100 text-neutral-700 p-2 m-2 placeholder:Enter"
 					type="password"
 				/>
