add File Upload to Wurbo example form

--- a/src/examples/forms/templates/input.html
+++ b/src/examples/forms/templates/input.html
@@ -29,5 +29,16 @@
 				/>
 			</div>
 		</div>
+		<div class="flex-1">
+			<div class="flex-1">Upload file:</div>
+			<div class="flex-1">
+				<input
+					id="{{ input.id|on('change') }}"
+					data-context-name="file"
+					class="rounded border border-blue-400 bg-green-100 text-neutral-700 p-2 m-2 placeholder:Enter"
+					type="file"
+				/>
+			</div>
+		</div>
 	</div>
 </div>
